template3: resolved alignment issue

--- a/styles/report-page.css
+++ b/styles/report-page.css
@@ -1537,15 +1537,21 @@ text-align: center;
     background-color: #fff8e6;
     /* border-radius: 8px; */
   }
-  
+  .t3graph-trainee{
+    padding: 20px;
+    height: auto;
+
+  }
   .title {
     text-align: center;
     font-size: 36px;
     color: #333;
     margin-bottom: 5px;
   }
-  
-  
+  /* .batch-container-main{
+
+  } */
+
   .batch-container {
     display: flex;
     justify-content: space-between;
@@ -1562,8 +1568,8 @@ text-align: center;
     /* border-radius: 20px; */
     padding: 20px;
     padding-top: 40px; 
-    margin-right: 20px; 
-    height: 150px;
+    /* margin-right: 20px;  */
+    height: 250px;
   }
   
   .card-title {
@@ -1580,7 +1586,7 @@ text-align: center;
     /* border: 2px solid #0062FF; */
   }
   .t3batchname{
-    width: 97%;
+    width: 100%;
     height: 80px;
     border: 2px solid black;
     /* border-radius: 20px; */
@@ -1592,7 +1598,11 @@ text-align: center;
     
   
   }
-  
+  #current-level-template3{
+    width: 100%;
+    height: 200px;
+    padding: 10px;
+  }
   #subtitle {
     text-align: center;
     font-size: 18px;
@@ -1600,11 +1610,11 @@ text-align: center;
     margin-bottom: 20px;
   }
   
-  .table-section {
+  /* .table-section {
     display: flex;
     justify-content: space-around;
     margin-bottom: 30px;
-  }
+  } */
 
   
   .batch-title {
@@ -1615,6 +1625,10 @@ text-align: center;
     padding: 10px;
 
    
+  }
+  .trainee-attendance-div{
+    display: flex;
+    justify-content: space-between;
   }
   .t3sessions{
     font-size: small;
@@ -1630,7 +1644,7 @@ text-align: center;
   .t3sessions-secondh{
     margin-left: 320px;
       }
-      .t3sessions-firsth{
+ .t3sessions-firsth{
         padding: 30px;
       }
 
@@ -1649,15 +1663,16 @@ text-align: center;
     margin-top: -10px;
   }
   .table-section {
-    background-color: #ffe6cc;
+    background-color: white;
     display: flex;
     justify-content: space-around;
     margin-bottom: 30px;
-    width: 98%;
-    margin: auto;
+    width: 100%;
+    margin-top: 10px;
+    padding: 30px;
     margin-left: -2px;
     margin-bottom: 20px;
-    height: 250px;
+    height: auto;
     border: 2px solid black;
     /* border-radius: 25px; */
 
@@ -1666,21 +1681,31 @@ text-align: center;
   .traneediv{
     width: 100%;
     height: auto;
-    display: flex;
-    justify-content: space-around;
+    /* display: flex;
+    justify-content: space-between; */
     margin-top: 20px;
   }
   .t3graphtraine{
-    width: 47%;
-    height: 200px;
+    width: 50%;
+    height: auto;
     border: 2px solid black;
-    margin-left: -15px;
+    /* padding: 20px; */
+    
+    /* margin-left: -15px; */
+  }
+  .democheck{
+    display: flex;
+    justify-content: space-between;
   }
   .t3traineeatt{
     width: 47%;
-    height: 200px;
+    height: auto;
     border: 2px solid black;
     margin-left: 0px;
+    padding: 20px;
+  }
+  .t3graphtraine{
+    padding: 20;
   }
   /* .graph-title{
     background-color: #0062FF;
@@ -1708,7 +1733,7 @@ text-align: center;
     margin-left: 95px;
     width: fit-content;
     position: absolute;
-    margin-top: -10px;
+    margin-top: -15px;
   
   }
   .graph-title-attendance{
@@ -1722,7 +1747,7 @@ text-align: center;
     margin-left: 80px;
     width: fit-content;
     position: absolute;
-    margin-top: -10px;
+    margin-top: -36px;
   
   
   }
@@ -1748,6 +1773,11 @@ text-align: center;
     border: 2px solid black;
     /* border-radius: 20px; */
   }
+  .t3graph-attendance{
+    height: 90%;
+    width: 90%;
+    padding: 10px;
+  }
   /* .t3graph-attendance{
     background-color: #ffe6cc;
     width: 49%;
@@ -1764,9 +1794,28 @@ text-align: center;
     border: 2px solid black; */
     /* border-radius: 20px; */
   /* } */
-  
+.t3graphtraine table{
+  width: 90%;
+  border-collapse: collapse;
+
+}
+
+.t3graphtraine th, .t3graphtraine td {
+  border: 1px solid #ddd;
+  padding: 12px;
+  text-align: center;
+}
+
+.t3graphtraine th {
+  background-color: #ff6f00;
+  color: white;
+}
+
+.t3graphtraine td {
+  background-color: #ffe6cc;
+}  
   .table-section table {
-    width: 70%;
+    width: 90%;
     border-collapse: collapse;
   }
   
